--- a/template.html
+++ b/template.html
@@ -12,8 +12,8 @@
     <main>
       <div class="container">
         <div class="introduction">
-          <h2 id="page_title">home</h2>
-          <p>Vanilla WebはHTML, CSS, JavaScriptのみで制作されたWebサイトです。</p>
+          <h2 id="page_title"></h2>
+          <!-- この中にコンテンツ -->
         </div>
       </div>
     </main>
