--- a/template.html
+++ b/template.html
@@ -5,8 +5,8 @@
 <body>
   <div class="wrapper">
     <!-- ヘッダー -->
-    <header id="header">
-    </header>
+    <div id="header">
+    </div>
 
     <!-- メインコンテンツ -->
     <main>
@@ -19,8 +19,8 @@
     </main>
 
     <!-- フッター -->
-    <footer id="footer">
-    </footer>
+    <div id="footer">
+    </div>
   </div>
   <script src="js/script.js"></script>
 </body>
